2025-03-16T01:09:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13878400176 # 595
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-16
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 479 872 / 495 888
* notice: next accum: outdated-unq outdated-all / unq all: 482 875 / 496 889
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-01 2025-03-02] / [2025-03-15]

2025-03-15T01:03:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13867889951 # 594
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-15
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 479 872 / 494 887
* notice: next accum: outdated-unq outdated-all / unq all: 479 872 / 495 888
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-03-01 2025-03-14]

2025-03-14T01:04:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13847690039 # 593
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-14
* notice: last 14d: unq all: 5 15
* notice: prev accum: outdated-unq outdated-all / unq all: 476 869 / 493 886
* notice: next accum: outdated-unq outdated-all / unq all: 479 872 / 494 887
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-27 2025-02-28] / [2025-03-13]

2025-03-13T01:05:19Z: