@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-16T01:09:53Z",
-  "count_outdated" : 875,
-  "uniques_outdated" : 482,
-  "count" : 889,
-  "uniques" : 496,
+  "timestamp" : "2025-03-17T01:07:26Z",
+  "count_outdated" : 876,
+  "uniques_outdated" : 483,
+  "count" : 890,
+  "uniques" : 497,
   "clones" : [
-    {
-      "timestamp": "2025-03-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-03-04T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-03-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
