@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-03-03T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-03-04T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-03-15T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-16T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
